force-app/main/default/objects/Interest__c/Interest__c.object-meta.xml
<CustomObject>
    <label>Interest</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Interest Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>