force-app/main/default/objects/Interest__c/fields/Interest_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Amount__c</fullName>
    <label>Interest Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>