force-app/main/default/objects/Interest__c/fields/Interest_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Mode__c</fullName>
    <label>Interest Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>