force-app/main/default/objects/Interest__c/fields/Interest_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interest_Transaction_Id__c</fullName>
    <label>Interest Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>