force-app/main/default/objects/Interest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interest_Payment_Amount__c</columns>
    <columns>Interest_Payment_Date__c</columns>
    <columns>Interest_Payment_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>